# MediaDMS

./: .gitignore  Cargo.toml  README.md  dump.json  requirements.txt
algorithms/: a2_tree.rs
backend/: Cargo.toml  dump.json
backend/src/: a2_tree.rs  algorithms.rs  digital_sort.rs  lib.rs  main.rs  postgres_repo.rs  repo.rs  service.rs
client/: app.py
database/: README.md  docker-compose.yml
database/init_db/: 01_schema.sql
database/seed_data/: seed.py
docs/: README.md  api_backend.md
saod/: Cargo.toml  FILES_OVERVIEW.md
saod/src/: binary_search.rs  main.rs
server/: Cargo.toml
server/src/: error.rs  main.rs  repo.rs  service.rs
src/: logging.rs  main.rs  models.rs
